# coalesced

./: .cargo-rdme.toml  Cargo.toml  README.md
.github/actions/versions/: action.yml
.github/workflows/: master.yml  pullrequest.yml
semigroup/: Cargo.toml
semigroup/examples/: clap_serde.rs  file_env_cli.rs  file_env_cli_john_doe.json
semigroup/src/: annotate.rs  combine.rs  commutative.rs  concurrent.rs  construction.rs  iter.rs  lazy.rs  lib.rs  monoid.rs  op.rs  segment_tree.rs  semigroup.rs
semigroup/src/op/: coalesce.rs  concat.rs  gcd.rs  hdr_histogram.rs  lcm.rs  max.rs  min.rs  overwrite.rs  prod.rs  sum.rs  xor.rs
semigroup/src/segment_tree/: index.rs  iter.rs
semigroup/tests/: compile.rs  custom_construction.rs  derive_annotated.rs  derive_semigroup.rs
semigroup/tests/ui/compile_fail/: derive_monoid_without_monoid.rs  other_type_annotation.rs
semigroup/tests/ui/histogram/: derive_monoid_without_monoid.rs  derive_monoid_without_monoid.stderr  other_type_annotation.stderr  unimplemented_semigroup.stderr
semigroup/tests/ui/semigroup/: derive_monoid_without_monoid.stderr  other_type_annotation.rs  other_type_annotation.stderr  unimplemented_semigroup.rs  unimplemented_semigroup.stderr
semigroup_base/: Cargo.toml
semigroup_base/src/: annotate.rs  commutative.rs  iter.rs  lib.rs  monoid.rs  op.rs  segment_tree.rs  semigroup.rs
semigroup_base/src/op/: coalesce.rs  concat.rs  gcd.rs  hdr_histogram.rs  lcm.rs  max.rs  min.rs  overwrite.rs  prod.rs  statistics.rs  sum.rs  xor.rs
semigroup_base/src/op/annotation/: coalesce.rs  concat.rs  overwrite.rs
semigroup_base/src/op/semigroup/: gcd.rs  lcm.rs  max.rs  min.rs  prod.rs  sum.rs  xor.rs
semigroup_base/src/segment_tree/: iter.rs
semigroup_derive/: Cargo.toml
semigroup_derive/src/: annotation.rs  constant.rs  construction.rs  error.rs  lib.rs  name.rs  properties.rs  property.rs  semigroup.rs
semigroup_derive/src/construction/: ast.rs  attr.rs
semigroup_derive/src/construction/ast/: construction_trait.rs  op_trait.rs
semigroup_derive/src/properties/: attr.rs  documented.rs
semigroup_derive/src/properties/documented/: content.rs  table.rs
semigroup_derive/src/property/: doc.rs  documented.rs
semigroup_derive/src/property/documented/: content.rs  table.rs
semigroup_derive/src/semigroup/: attr.rs
semigroup_derive/src/semigroup/ast/: field_semigroup.rs  struct_semigroup.rs
semigroup_derive/tests/snapshots/: construction_annotated.snap  construction_custom_annotation.snap  construction_not_annotated.snap  properties_annotated.snap  properties_not_annotated.snap  properties_where.snap  semigroup_annotated.snap  semigroup_custom_annotation.snap  semigroup_monoid.snap  semigroup_not_annotated.snap
src/: lib.rs
tests/: custom_construction.rs  derive_annotated.rs  derive_semigroup.rs
tests/ui/monoid/: other_type_annotation.rs  unimplemented_semigroup.stderr
tests/ui/semigroup/: other_type_annotation.stderr  unimplemented_semigroup.rs
(+1 files in other folders)
