[package]
name = "semigroup"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[features]
derive = []
serde = ["dep:serde"]
clap = ["dep:clap"]
test = ["monoid", "dep:rand"]
monoid = ["dep:num"]
histogram = ["dep:hdrhistogram"]

[dependencies]
semigroup_derive = { path = "../semigroup_derive", features = ["use_scope"] }
clap = { version = "4.5.48", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
num = { version = "0.4.3", optional = true }
rand = { version = "0.9.2", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }

[dev-dependencies]
semigroup = { path = ".", features = ["derive", "test"] }
clap = { version = "4.5.48", features = ["derive"] }
num = "0.4.3"
rand = "0.9.2"
rstest = "0.26.1"
serde_json = "1.0.145"
trybuild = { version = "1.0.111", features = ["diff"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
